added influxdb demo